--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ p {
     height: 50px;
     width: 20%;
     border-radius: 0px 5px 5px 0px;
-    background-image: linear-gradient(red,orangered);
+    background-image: linear-gradient(darkred ,orangered);
     border: none;
     color: white;
     font-size: 1.1em;
@@ -253,6 +253,7 @@ footer{
     text-align: center;
     padding: 20px;
     background-color: black;
+    margin-top: 50px;
 }
 footer h4{
     font-style: italic;
